[package]
name = "prbiconv"
version = "1.0.0"
edition = "2024"
description = "Command line tool to convert between binary data and pricklybird strings."
license = "MIT"
homepage = "https://github.com/ndornseif/rspricklybird/"
repository = "https://github.com/ndornseif/rspricklybird/"
readme = "../README.md"
keywords = ["encoding", "binary-data", "standard", "cli"]
categories = ["command-line-utilities", "encoding", "parsing"]

[lints.rust]
forgetting_references = "warn"
non_ascii_idents = "warn"
missing_docs = "warn"
missing_debug_implementations = "warn"
missing_copy_implementations = "warn"
rust_2018_idioms = "warn"
ambiguous_negative_literals = "warn"
unit_bindings = "warn"
redundant_imports = "warn"
unused_results = "warn"
variant_size_differences = "warn"
ambiguous_glob_imports = "warn"

[lints.clippy]
missing_docs_in_private_items = "warn"
pedantic = "warn"
if_not_else = "warn"
cargo = "warn"
panic_in_result_fn = "warn"
needless_collect = "warn"
redundant_clone = "warn"
alloc_instead_of_core = "warn"
assigning_clones = "warn"
collection_is_never_read = "warn"
derive_partial_eq_without_eq = "warn"
empty_enum_variants_with_brackets = "warn"
equatable_if_let = "warn"
exit = "warn"
if_then_some_else_none = "warn"
imprecise_flops = "warn"
infinite_loop = "warn"
lossy_float_literal = "warn"
missing_assert_message = "warn"
multiple_inherent_impl = "warn"
needless_pass_by_ref_mut = "warn"
non_ascii_literal = "warn"
option_if_let_else = "warn"
or_fun_call = "warn"
partial_pub_fields = "warn"
precedence = "warn"
pub_without_shorthand = "warn"
redundant_pub_crate = "warn"
redundant_type_annotations = "warn"
same_name_method = "warn"
semicolon_outside_block = "warn"
shadow_reuse = "warn"
shadow_same = "warn"
shadow_unrelated = "warn"
str_to_string = "warn"
string_add = "warn"
string_lit_chars_any = "warn"
suboptimal_flops = "warn"
tests_outside_test_module = "warn"
todo = "warn"
too_long_first_doc_paragraph = "warn"
undocumented_unsafe_blocks = "warn"
type_repetition_in_bounds = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
unused_trait_names = "warn"
use_debug = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
verbose_file_reads = "warn"
wildcard_dependencies = "warn"

[dependencies]
clap = { version = "4.5.32", features = ["derive", "cargo"] }
pricklybirdlib = "1.0.0"
